# whisper.cpp

./: CMakeLists.txt
sumitsafelib/: CMakeLists.txt  whisperRep.txt
sumitsafelib/CONTENT HERE SHOULD BE IN WHISPER.CPP ROOT/: CMakeLists.txt
sumitsafelib/include/: Readme.txt  sumitsafelib.h
sumitsafelib/src/: sumitsafelib.cpp  sumitsafelib.def
